--- a/SwiftCart/index.html
+++ b/SwiftCart/index.html
@@ -34,11 +34,13 @@
   <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 
   <title>SwiftCart</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="src\app.css">
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/app.svelte"></script>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
 </body>
 
 </html>
